[package]
name = "eci-backend-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eci-core = { path = "../eci-core" }
rusqlite = { version = "0.27.0", features = ["chrono"] }
serde_rusqlite = "0.30.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79"}
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"