[package]
name = "eci-backend-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eci-core = { path = "../eci-core" }

# Utilities
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4"] }
log = { version = "0.4.16"}

# Database Interaction
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
rusqlite = { version = "0.27.0", features = ["chrono"] }

serde = "1.0.136"

[dev-dependencies]
eci-format-json = { path = "../eci-format-json" }