[package]
name = "eci-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eci-core = { path = "../eci-core" }
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
eci-backend-sqlite = { path = "../eci-backend-sqlite" }
eci-format-json = { path = "../eci-format-json" }